--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" oncontextmenu="return false">
-  
+<html lang="en">
+  <!-- oncontextmenu="return false" -->
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -44,7 +44,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="root" style='overflow: hidden'></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
