--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root" style='overflow: hidden'></div>
+  <div class="loader-container">
+    <div class="loader"></div>
+  </div>
 
   <script>
     document.onkeydown = function (e) {
