--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,10 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root" style='overflow: hidden'></div>
-  <div class="loader-container">
+  <!-- <div class="loader-container" id="spinner">
     <div class="loader"></div>
+  </div> -->
+  <div id="root">
   </div>
 
   <script>
