--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,9 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <!-- <div class="loader-container" id="spinner">
-    <div class="loader"></div>
-  </div> -->
+  <div class="loader" id="spinner"></div>
+
+
   <div id="root">
   </div>
 
