--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-  <!-- oncontextmenu="return false" -->
+<html lang="en" oncontextmenu="return false">
+  
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -8,7 +8,6 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
